<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0099cc"
    tools:context="com.sundback.psk.wstation1.Temperatures">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal|top">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/outdoorlable"
            android:text="@string/outdoorlable"
            android:textStyle="bold"
            android:textSize="30dp"
            android:background="#f85a5a" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/outdoorvalues"
            android:text="-12, 50%, 950bar"
            android:textStyle="bold"
            android:textSize="50dp"
            android:textAlignment="center" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/indoorlable"
            android:text="@string/indoorlable"
            android:textStyle="bold"
            android:textSize="30dp"
            android:background="#f85a5a" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/indoorvalues"
            android:text="@string/indoorvalues"
            android:textStyle="bold"
            android:textSize="50dp"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"
            android:textIsSelectable="true" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/freezerlable"
            android:text="@string/freezerlable"
            android:textStyle="bold"
            android:textSize="30dp"
            android:background="#f85a5a"
            android:layout_gravity="center_horizontal" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/freezerlable"
            android:text="@string/freezervalues"
            android:textStyle="bold"
            android:textSize="40dp"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"
            android:singleLine="true" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/fridgelable"
            android:text="@string/fridgelable"
            android:textStyle="bold"
            android:textSize="30dp"
            android:background="#f85a5a" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText3"
            android:text="4   6"
            android:textStyle="bold"
            android:textSize="40dp"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"
            android:textIsSelectable="true" />
    </LinearLayout>
</FrameLayout>
